Publish ItemBan 2.0.0 scan scheduling and all loader builds.